- NEW: Files dragged from the explorer to the repository browser will
       add them to the repository. (Stefan)
- NEW: Renaming in the repository browser now happens inline. (Stefan)
- NEW: Words which are in the autocompletion list aren't spell checked
       anymore. See issue #102. (Stefan)
- NEW: "explore to" context menu command in the commit dialog.
       See issue #105. (Stefan)
- CHG: The ESC key closes the progress dialog. See Issue #96. (Stefan)
- CHG: Reintroduce the doubleclick action in the log dialog. (Stefan)
- BUG: Crash in TSVNCache. See issue #91.
- BUG: File context menu shown if more than one folder was
       selected. See issue #92.
- BUG: Lock dialog could show folders. See issue #93.
- BUG: Commit dialog could crash when sorting. See issue #99.
- BUG: Installation for All Users didn't work properly. (Stefan)
- BUG: A file:/// path wasn't recognized as a valid windows path
       and a warning was shown even if the path was valid. (Stefan)
- BUG: The log dialog was always started from the repobrowser
       at HEAD revision instead of the selected revision. (Stefan)
- BUG: Wrong rendering/resizing of the listview in the folder
       browser dialog when exporting. (Stefan)
- BUG: The number of selected items was shown wrong in the commit dialog
       if an unversioned or deleted item was checked. (Stefan)
- BUG: Add 'Compare with WC/BASE' options to 'Check for Modification'.
       See issue #106. (Stefan)
- BUG: The switch command didn't work and crashed. (Stefan)
- BUG: The 'Lock' menu was shown for added files. (Stefan)
- BUG: TortoiseMerge wouldn't save files on UNC paths.
       See issue 108. (Stefan)
- BUG: The "check for modifications" dialog showed a wrong dialog title
       when "Check Repository" was clicked. (Stefan)
- BUG: TortoiseMerge used the wrong encoding to show the files. (Stefan)
- BUG: After a commit/update/... the file overlay icons weren't properly
       refreshed. (Stefan)

Version 1.2
